@@ -1,6 +1,7 @@
 Release Notes
 
 * current
+  * setting activity for registerDatasetLocation
   * refreshing fairshre table every 15min
   * using group account for group.* with destSE
   * using "User Subscriptions" for user's rules
